# okahu-demo-openai

./: LICENSE  README.md  botenv.sh.template  coffee_app_openai.sh  coffee_client_openai.sh  coffee_client_openai_with_okahu.sh  conda-env.yml  requirements.txt
config/: config.ini.template
credential_utilties/: pyproject.toml
credential_utilties/src/credential_utilties/: environment.py  okahu_creds.py  openai_creds.py  self_hosted_creds.py
embeddings/: pyproject.toml
rag_openai_service/: README.md  app_client.py  app_server.py  coffee_rag_openai.py  coffee_rag_openai_with_okahu.py  endpoint-deployment.yml
vectorization/: README.md  aml_compute.yml  aml_env.yaml  aml_job.yml  conda_env.yml  embeddings_wrapper.py  vectorization.py
