[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embeddings"
version = "0.0.1"
authors = [
  { name="Okahu Inc.", email="engineering@okahu.ai" },
]
description = "package with app authentication environment setup"
#readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sentence-transformers"
]

[project.urls]
Homepage = "https://github.com/okahu/okahu-demo"
Issues = "https://github.com/okahu/okahu-demo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/embeddings"]
